--- a/atromio/templates/mytemplate.jinja2
+++ b/atromio/templates/mytemplate.jinja2
@@ -2,7 +2,16 @@
 
 {% block content %}
 <div class="content">
-  <h1><span class="font-semi-bold">Pyramid</span> <span class="smaller">Alchemy project</span></h1>
-  <p class="lead">Welcome to <span class="font-normal">atromio</span>, a&nbsp;Pyramid application generated&nbsp;by<br><span class="font-normal">Cookiecutter</span>.</p>
+    <h1><span class="font-semi-bold">Pyramid</span> <span class="smaller">Alchemy project</span></h1>
+    <p class="lead">Welcome to <span class="font-normal">{{ project }}</span>, a&nbsp;Pyramid application generated&nbsp;by<br><span class="font-normal">Cookiecutter</span>.</p>
+    {% if accounts %}
+    <h2>available accounts</h2>
+    <ul>
+    {% for name in accounts %}
+        <li>{{name}}</li>
+    {% endfor %}
+    </ul>
+    {% endif %}
 </div>
+
 {% endblock content %}
