--- a/atromio/templates/mytemplate.jinja2
+++ b/atromio/templates/mytemplate.jinja2
@@ -4,14 +4,39 @@
 <div class="content">
     <h1><span class="font-semi-bold">Pyramid</span> <span class="smaller">Alchemy project</span></h1>
     <p class="lead">Welcome to <span class="font-normal">{{ project }}</span>, a&nbsp;Pyramid application generated&nbsp;by<br><span class="font-normal">Cookiecutter</span>.</p>
-    {% if accounts %}
-    <h2>available accounts</h2>
+    <h2>Available accounts</h2>
     <ul>
-    {% for name in accounts %}
-        <li>{{name}}</li>
+    {% for acc_id, name, transfers in accounts %}
+        <li>{{ acc_id }}: {{ name }}</li>
+        <ul>
+            {% for _, committed_at, _, amount, target_account_id in transfers %}
+            <li>{{ committed_at }}: {{ amount }} (to: {{ target_account_id }})</li>
+            {% endfor %}
+            <li>Add new transfer
+                <form action="/add_transfer" method="POST">
+                    at: <input type="date" name="committed_at" />
+                    amount: <input type="number" name="amount" />
+                    <input type="hidden" name="source_account_id" value="{{ acc_id }}" />
+                    to: <select name="target_account_id">
+                        {% for other_acc_id, other_acc_name, _ in accounts %}
+                            {% if other_acc_id != acc_id %}
+                                <option value="{{ other_acc_id }}">{{ other_acc_name }}</option>
+                            {% endif %}
+                        {% endfor %}
+                    </select>
+                    <input type="submit" value="submit" />
+                </form>
+            </li>
+        </ul>
     {% endfor %}
+        <li>Add new account:
+            <form action="/add_account" method="POST">
+                <input type="text" name="account_name" />
+                <input type="submit" value="submit" />
+            </form>
+        </li>
     </ul>
-    {% endif %}
+    <br/>
 </div>
 
 {% endblock content %}
