ft(templates/*): switches to using `class` instead `id` attributes

--- a/atromio/templates/layout.jinja2
+++ b/atromio/templates/layout.jinja2
@@ -62,7 +62,7 @@
     <script src="//oss.maxcdn.com/libs/twitter-bootstrap/3.0.3/js/bootstrap.min.js" integrity="sha384-s1ITto93iSMDxlp/79qhWHi+LsIi9Gx6yL+cOKDuymvihkfol83TYbLbOw+W/wv4" crossorigin="anonymous"></script>
     <script>
         let today = new Date();
-        let date_inputs = window.document.querySelectorAll("#committed_at");
+        let date_inputs = window.document.querySelectorAll(".committed_at");
         date_inputs.forEach(item => item.value = today.getFullYear() + "-" + (today.getMonth()+1) + "-" + today.getDate());
      </script>
   </body>
